<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.develop.app.eventtop.SignIn">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/darker_gray"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:targetApi="lollipop" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/darker_gray"
        android:drawableLeft="@drawable/ic_visibility_off_black_24dp"
        android:drawablePadding="15dp"
        android:drawableTint="@android:color/darker_gray"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="40"
        android:textDirection="anyRtl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView"
        tools:ignore="RtlHardcoded"
        tools:targetApi="m" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView2"
        app:layout_constraintVertical_bias="0.211"
        tools:ignore="UselessParent">

        <RadioButton
            android:id="@+id/radio_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_title1"
            android:theme="@style/AppTheme2"/>

        <RadioButton
            android:id="@+id/radio_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/sign_in_title2"
            android:theme="@style/AppTheme2"/>

    </RadioGroup>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="268dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/purple_button"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        app:layout_constraintVertical_bias="0.088"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in_title3"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/facebook_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/facebook_login" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in_title4"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/register_comp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/purple_button"
            android:padding="10dp"
            android:text="@string/sign_in_title5"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="10dp" />

        <Button
            android:id="@+id/register_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/purple_button"
            android:padding="10dp"
            android:text="@string/sign_in_title6"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            tools:ignore="ButtonStyle" />

    </TableRow>

</android.support.constraint.ConstraintLayout>
