<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container"
        tools:context="com.develop.app.eventtop.SignUp">

        <include android:id="@+id/toolbar" layout="@layout/toolbar_layout" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/full_name"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:targetApi="lollipop" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView5"
            tools:targetApi="lollipop" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/darker_gray"
            android:drawableLeft="@drawable/ic_visibility_off_black_24dp"
            android:drawablePadding="15dp"
            android:drawableTint="@android:color/darker_gray"
            android:textDirection="anyRtl"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView"
            tools:ignore="RtlHardcoded"
            tools:targetApi="m" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView2"
            tools:targetApi="lollipop" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="40"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView3"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:id="@+id/one_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView4">

            <Spinner
                android:id="@+id/spinner_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:theme="@style/AppTheme2"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined">
            </Spinner>

            <TextView
                android:id="@+id/city_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="اختر المدينة"
                android:textSize="16sp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/two_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/one_layout"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female_text"
                    android:theme="@style/AppTheme2"/>

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male_text"
                    android:theme="@style/AppTheme2"/>

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/purple_button"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/two_layout" />

        <TextView
            android:id="@+id/v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sign_up" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>

